tests/error/linear_errors/for_return.err
Error: Break in non-droppable loop (at $FILE:12:12)
   | 
10 |         rs += [q]
11 |         if b:
12 |             return []
   |             ^^^^^^^^^ Early exit in non-droppable loops is not allowed
   | 
 9 |     for q, b in qs:
   |                 -- Iterator has non-droppable type `list[(qubit, bool)]`

Guppy compilation failed due to 1 previous error
